--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.2.8"
+    "com.unity.cinemachine": "2.2.8",
+    "com.unity.2d.spriteshape": "1.0.12-preview.1"
   }
 }
